--- a/platformio.ini
+++ b/platformio.ini
@@ -15,4 +15,8 @@ framework = arduino
 monitor_speed = 115200
 lib_deps = 
 	Wire
-
+	robtillaart/SHT31@^0.4.0
+	knolleary/PubSubClient@^2.8
+	https://github.com/Risele/SHT3x.git
+	https://github.com/DFRobot/DFRobot_SHT3x.git
+	sparkfun/SparkFun MAX3010x Pulse and Proximity Sensor Library@^1.1.2
