Code update MAX30102 HR, created functions and clean code

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,3 +20,4 @@ lib_deps =
 	https://github.com/Risele/SHT3x.git
 	https://github.com/DFRobot/DFRobot_SHT3x.git
 	sparkfun/SparkFun MAX3010x Pulse and Proximity Sensor Library@^1.1.2
+	bblanchon/ArduinoJson@^6.21.3
