Changes in progress.md

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,7 @@ platform = espressif32
 board = dfrobot_firebeetle2_esp32e
 framework = arduino
 monitor_speed = 115200
+monitor_filters = esp32_exception_decoder
 lib_deps = 
 	Wire
 	robtillaart/SHT31@^0.4.0
