--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,7 @@ board = dfrobot_firebeetle2_esp32e
 framework = arduino
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
+debug_tool = esp-prog
 lib_deps = 
 	Wire
 	knolleary/PubSubClient@^2.8
