--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,10 @@ framework = arduino
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
 debug_tool = esp-prog
+build_flags = 
+    -Os
+    -ffunction-sections
+    -fdata-sections
 lib_deps = 
 	Wire
 	knolleary/PubSubClient@^2.8
