Working ts creation and WiFi/MQTT logic with LittleFS

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,13 +15,16 @@ framework = arduino
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
 debug_tool = esp-prog
+board_build.partitions = default.csv
 build_flags = 
 	-Os
 	-ffunction-sections
 	-fdata-sections
+	-DCORE_DEBUG_LEVEL=0
 lib_deps = 
 	Wire
 	knolleary/PubSubClient@^2.8
 	https://github.com/Risele/SHT3x.git
 	sparkfun/SparkFun MAX3010x Pulse and Proximity Sensor Library@^1.1.2
 	https://github.com/tzapu/WiFiManager
+	https://github.com/bblanchon/ArduinoJson
