--- a/python/.env
+++ b/python/.env
@@ -6,9 +6,9 @@ DEVICE_ID = ""
 HA_TOKEN = "YOUR_LONG_LIVED_ACCESS_TOKEN"
 
 # Home assistant sensor urls
-HA_TEMP_URL = "http://192.168.1.142:8123/api/states/sensor.sh35_temperature"
-HA_HUM_URL = "http://192.168.1.142:8123/api/states/sensor.sh35_humidity"
-HA_BPM_URL = "http://192.168.1.142:8123/api/states/sensor.max30102_pulse"
-HA_SPO2_URL = "http://192.168.1.142:8123/api/states/sensor.max30102_spo2"
-HA_ECG_URL = "http://192.168.1.142:8123/api/states/sensor.ad8232_ecg"
+HA_TEMP_URL = "http://local_ip:8123/api/states/sensor.sh35_temperature"
+HA_HUM_URL = "http://local_ip.142:8123/api/states/sensor.sh35_humidity"
+HA_BPM_URL = "http://local_ip:8123/api/states/sensor.max30102_pulse"
+HA_SPO2_URL = "http://local_ip:8123/api/states/sensor.max30102_spo2"
+HA_ECG_URL = "http://local_ip:8123/api/states/sensor.ad8232_ecg"
 
